--- a/ideaset/templates/ideaset/edit.html
+++ b/ideaset/templates/ideaset/edit.html
@@ -1,4 +1,5 @@
 {% extends 'ideaset/base.html' %}
+{% block title %} Edit Old Task {% endblock %}
 {% block content%}
 <h1>Edit Old Task </h1>  
 <form action="" method ="POST">
