--- a/ideaset/templates/ideaset/index.html
+++ b/ideaset/templates/ideaset/index.html
@@ -1,4 +1,7 @@
 {% extends 'ideaset/base.html' %}
+
+{% block title %} Task Manager - Home Page{% endblock %}
+
 {% if task_list %}
   {% block content %}
     <div class="col-md-12" style="height:90vh;">
