--- a/ideaset/templates/ideaset/add_task.html
+++ b/ideaset/templates/ideaset/add_task.html
@@ -1,4 +1,5 @@
 {% extends 'ideaset/base.html' %}
+{% block title %} Add New Task {% endblock %}
 {% block content %}
   <h1>Add New Task</h1>
   <form action="{% url 'add' %}" method ="POST">
