--- a/ideaset/templates/ideaset/base.html
+++ b/ideaset/templates/ideaset/base.html
@@ -53,7 +53,7 @@
   </div>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid mt-5 mb-4">
   <div class="row">
       {% block content %}
       {% endblock %}
