--- a/ideaset/templates/ideaset/base.html
+++ b/ideaset/templates/ideaset/base.html
@@ -25,7 +25,7 @@
           <a class="nav-link" href="{% url 'add' %}">Add New Task</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Login</a>
+            <a class="nav-link" href="{% url 'login' %}" tabindex="-1" aria-disabled="true">Login</a>
           </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -37,7 +37,7 @@
             <li><a class="dropdown-item" href="#">Profile</a></li>
             <li><a class="dropdown-item" href="#">Forgot Password</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Logout</a></li>
+            <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
           </ul>
         </li>
         <li class="nav-item">
